scrollbar in tthe assistant fixed

--- a/MovieMania/src/styles/assistant.scss
+++ b/MovieMania/src/styles/assistant.scss
@@ -1,6 +1,6 @@
 .box{
     width: 100%;
-    height: 89vh;
+    height: 92vh;
     // background-color: antiquewhite;
     display: flex;
     justify-content: center;
@@ -8,6 +8,10 @@
     flex-direction: row;
     & .chatArea{
         flex: 1;
+        height: 97%;
+        // display: fixed;
+        width: 50%;
+        // overflow: hidden;
         justify-content: center;
         // background-color: white;
         // border-right: solid 1px white;
@@ -26,7 +30,9 @@
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
             border: 2px solid rgba(146, 146, 146, 0.18);
-            box-shadow: 0 1px 1px 0 rgba(44, 44, 44, 0.37);
+            box-shadow: 0 1px 1px 0 rgba(130, 130, 130, 0.37);
+            
+        
 
             & .chatbox{
                 flex:1;
@@ -35,26 +41,46 @@
                 width: 100%;
                 height: 90%;
                 border-bottom: solid 1px rgba(179, 177, 177, 0.419);
+                overflow-y: scroll;
+            scroll-behavior: smooth; 
+            &::-webkit-scrollbar {
+                display: none;
+            }
+                        // Hide scrollbar for Internet Explorer and Edge
+                        -ms-overflow-style: none;
+                        
+                        // Hide scrollbar for Firefox
+            scrollbar-width: none;
                 // background-color: aliceblue;
                 & .bot{
                     // justify-content: space-between;
                     display: inline-block;
-                        border-radius: 20px;
-                        // padding-left: 70%;
-                        margin: 10px;
-                        width: 100%;
-                        max-width: 75%;
-                        // align-items: center;
-                        padding: 10px 20px 10px 25px;
-                        background-color: #1d1c1c;
-                        // background: linear-gradient(135deg, rgba(0, 0, 0, 0.392), rgba(144, 144, 144, 0.038));
-                        border: solid 1px rgba(179, 177, 177, 0.419);
-                        // border-bottom: solid 1px rgba(179, 177, 177, 0.419);
-                        box-shadow: 5px rgba(228, 227, 227, 0.419);
-                        color: rgb(218, 218, 218);     
+                    // position: relative;
+                    border-radius: 20px;
+                    // padding-left: 70%;
+                    padding-left: 2%;
+                    margin: .5%;
+                    width: 100%;
+                    display: flex;
+                    justify-content: flex-start;
+                        
+                        & p{
+                            width: fit-content;
+                            max-width: 80%;
+                            margin-bottom: 1.5%;
+                            margin-top: 1.5%;
+                            // background-color: #1d1c1c;
+                            background: linear-gradient(135deg,#1d1c1c , rgba(0, 0, 0, 0.392));
+                            border: solid 1px rgba(179, 177, 177, 0.419);
+                            // border-bottom: solid 1px rgba(179, 177, 177, 0.419);
+                            box-shadow: 5px rgba(228, 227, 227, 0.419);
+                            color: rgb(175, 175, 175);   
+                            border-radius: 20px 20px 20px 2px;
+                            padding: 1% 2% 1% 2%; 
+                        }
                 }
                 & .user{
-                    float: right;
+                    // float: right;
                     display: inline-block;
                     // position: relative;
                     border-radius: 20px;
@@ -78,14 +104,15 @@
                         width: fit-content;
                         max-width: 80%;
                         
-                        background-color: #1d1c1c;
-                        // background: linear-gradient(135deg,rgba(144, 144, 144, 0.038), rgba(0, 0, 0, 0.392) );
+                        // background-color: #1d1c1c;
+                        background: linear-gradient(135deg, rgba(20, 20, 20, 0.392),rgba(25, 25, 25, 0.392) );
                         border: solid 1px rgba(179, 177, 177, 0.419);
                         // border-bottom: solid 1px rgba(179, 177, 177, 0.419);
                         box-shadow: 5px rgba(228, 227, 227, 0.419);
                         color: rgb(175, 175, 175);   
-                        border-radius: 20px;
-                        padding: 1%;
+                        border-radius: 20px 20px 2px 20px;
+                        padding: 1% 2% 1% 2%;
+
                         // text-align: right;
                     }
                 }
@@ -130,6 +157,7 @@
     }
     & .moviesSugest{
         flex: 1;
+        // width: 4%0;
         // background-color: rgb(154, 20, 20);
     }
 
